# projeto

./: .gitignore  N0_news_curator_agent.py  N1_news_curator_agent.py  N2_news_curator_agent.py  N3_news_curator_agent.py  README.md  pyproject.toml  teste.txt
skills/apuracao-fontes/: SKILL.md
skills/pesquisa-noticias/: SKILL.md
skills/redacao-jornalistica/: SKILL.md
skills/verificacao-factual/: SKILL.md
